# moveit_puzzle_demo

./: README.md
moveit/src/: .rosinstall  .rosinstall.bak
moveit/src/moveit_planners/moveit_planners/: package.xml
moveit/src/moveit_planners/ompl/ompl_interface/: CMakeLists.txt
moveit/src/moveit_planners/ompl/ompl_interface/src/: SetUnion.cpp  VRVEdge.cpp  VRVPlanner.cpp  VRVVertex.cpp  model_based_planning_context.cpp  ompl_interface.cpp  ompl_plugin.cpp
moveit/src/moveit_pr2/PR2_Card_Config/: .setup_assistant  .setup_assistant~  CMakeLists.txt  package.xml
moveit/src/moveit_pr2/PR2_Card_Config/config/: card.stl  cardPuzzleWithMetaData_CCs.blg  cardPuzzleWithMetaData_Roadmap.blg  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  pr2.srdf  pr2_cardPuzzle.urdf  ring.stl  starting_robot_pose.txt
moveit/src/moveit_pr2/PR2_Card_Config/launch/: demo.launch  demo.launch~  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  run_benchmark_server_ompl.launch  sensor_manager.launch  setup_assistant.launch  trajectory_execution.launch  warehouse.launch
moveit/src/moveit_pr2/custom_joint_state_publisher/: CMakeLists.txt  package.xml  setup.py
moveit/src/moveit_pr2/custom_joint_state_publisher/custom_joint_state_publisher/: custom_joint_state_publisher
moveit/src/moveit_pr2/pr2_moveit_config/launch/: demo.launch~  move_group.launch  move_group.launch~  planning_context.launch  planning_context.launch~
moveit/src/moveit_ros/planning/planning_pipeline/src/: planning_pipeline.cpp
(+11 files in other folders)
